--- a/flyer/index.html
+++ b/flyer/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/konstanz-g32edc1f1e_1920..jpg" alt="Conference Template Banner">
         <div class="top-left">
             <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
         </div>
@@ -30,13 +30,13 @@
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the Workshop" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Workshop Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="Directions to the Workshop" href="directions">Directions</a>
             </td>
             <td class="navigation">
                 <a class="current" title="Conference Flyer" href="flyer">Flyer</a>
