--- a/flyer/index.html
+++ b/flyer/index.html
@@ -20,7 +20,7 @@
             <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            July 27-28 2023 <br> University of Konstanz, Konstanz
         </div>
     </div>
 
@@ -39,7 +39,7 @@
                 <a title="Directions to the Workshop" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Conference Flyer" href="flyer">Flyer</a>
+                <a class="current" title="Accommodation" href="flyer">Flyer</a>
             </td>
         </tr>
     </table>
@@ -47,26 +47,9 @@
     <br>
 
     <p>
-        I got lazy on this page and didn&rsquo;t mock up any template flyers for this template website.
-        So these are the flyers that <a target="_blank" href="https://math.jonathanalcaraz.com/">Jonathan Alcaraz</a>
-        designed for <a target="_blank" href="http://math.ucr.edu/~mathconn/">MathConnections 2019</a>.
-        Click on the color or grayscale flyer below to download a pdf.
+        Here you can find links to suitable accommodation options.
     </p>
 
-    <table class="flyers">
-        <tr>
-            <td class="flyer">
-                <a href="assets/MathConnections-Flyer.pdf">
-                    <img src="assets/MathConnections-Flyer.png" alt="MathConnections Color Flyer" style="width:100%">
-                </a>
-            </td>
-            <td class="flyer">
-                <a href="assets/MathConnections-FlyerBW.pdf">
-                    <img src="assets/MathConnections-FlyerBW.png" alt="MathConnections BW Flyer" style="width:100%">
-                </a>
-            </td>
-        </tr>
-    </table>
 
     <footer>
         &copy; Conference Organizers
