--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2023</span>
+            <span class="title1">Musical Minds</span><span class="title2">Workshop</span> <span class="year">2023</span>
         </div>
         <div class="bottom-right">
             July 27-28 2023 <br> University of Konstanz, Konstanz
