--- a/registration/index.html
+++ b/registration/index.html
@@ -17,10 +17,10 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Musical Minds</span><span class="title2">Workshop</span> <span class="year">2023</span>
+            <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span>
         </div>
         <div class="bottom-right">
-            July 27-28 <br> University of Konstanz, Konstanz
+            27-28 July 2023 <br> University of Konstanz, Germany
         </div>
     </div>
 
