--- a/directions/index.html
+++ b/directions/index.html
@@ -17,10 +17,10 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span> 
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            27-28 July 2023 <br> University of Konstanz, Germany
         </div>
     </div>
 
