--- a/flyer/index.html
+++ b/flyer/index.html
@@ -17,10 +17,10 @@
     <div class="banner">
         <img src="assets/konstanz-g32edc1f1e_1920..jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span> 
         </div>
         <div class="bottom-right">
-            July 27-28 2023 <br> University of Konstanz, Konstanz
+            27-28 July 2023 <br> University of Konstanz, Germany
         </div>
     </div>
 
@@ -52,7 +52,7 @@
 
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Eline A. Smit
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
