--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span>
         </div>
         <div class="bottom-right">
-            July 27-28 2023 <br> University of Konstanz, Konstanz
+            27-28 July 2023 <br> University of Konstanz, Germany
         </div>
     </div>
 
@@ -52,39 +52,42 @@
         Text text text
     </p>
     <p>
-        This paragraph is just some filler text to give the homepage some volume:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
+        We are delighted to invite submissions for the two-day workshop <strong>“Musical minds: Exploring cognitive links between language and music”<strong>. 
+       
+        Language and music are amongst the most impressive cognitive, social and communicative achievements of humans. The links between the two have been frequently studied and have led to many great insights, such as how musical skills transfer to language skill. However, some of these predicted effects do not always replicate across studies. Many aspects of the bidirectionality between language and music remain unknown. In particular, the effect of native language on music processing and skill has remained largely unaddressed.
+
+        With this two-day workshop, we aim to bring together a range of researchers interested in the links between language and music in order to discuss the current status quo, and facilitate discussions on how to further advance the field. Submissions can cover a wide range of topics related to cognition, perception, learning or production that link music and language. The planned program will include keynote lectures, presentations and round tables with ample time for discussion and socialising.
+
+
+        Confirmed speakers for the keynote lectures are Dr. Lieke van Maastricht (Radboud University) and Prof. Daniela Sammler (Max Planck Institute for Empirical Aesthetics). 
+
+
+        The workshop will take place at the University of Konstanz, Germany. Konstanz is a city beautifully located at Lake Constance (the Bodensee) and is a popular tourist destination. The University itself is surrounded by a nature reserve and located on top of a hill overlooking the lake and the mountains.
     </p>
 
     <h2>Organizers</h2>
     <p>
-        Here&rsquo;s a good place to list the organizers and sponsors of the conference,
-        as well as list contact information for the organizers,
-        and show off the logos of the sponsors.
-        It looks like his conference was sponsored by kittens!
+        This workshop is organized by Prof. Tamara Rathcke and Dr. Eline A. Smit from the Department of Linguistics at the University of Konstanz. Feel free to contact us if you have any questions or need any support!
+        
+        We gratefully acknowledge the following institutions who support this workshop:
     </p>
     <table class="sponsors">
         <tr>
             <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten1.jpg" alt="First Sponsor Name">
+                <a href="https://www.uni-konstanz.de/">
+                    <img src="assets/konstanzuniversity.jpg" alt="First Sponsor Name">
                 </a>
             </td>
             <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten2.jpg" alt="Second Sponsor Name" style="width: 80%">
-                </a>
-            </td>
-            <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten3.jpg" alt="Third Sponsor Name">
+                <a href="https://www.uni-konstanz.de/universitaet/ueber-die-universitaet-konstanz/stiften-und-foerdern/dr-august-und-annelies-karst-stiftung/">
+                    <img src="assets/affstiftung.jpg" alt="Second Sponsor Name" style="width: 80%">
                 </a>
             </td>
         </tr>
     </table>
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Eline A. Smit
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
