--- a/index.html
+++ b/index.html
@@ -44,30 +44,33 @@
         </tr>
     </table>
 
-    <h2>Musical Minds workshop</h2>
-    <p>
-        Text text text
-    </p>
-    <p>
-        Text text text
-    </p>
+    <h2> <strong> Interdisciplinary workshop at the University of Konstanz, Germany taking place 27-28 July 2023 <strong> /h2>
     <p>
         We are delighted to invite submissions for the two-day workshop <strong>“Musical minds: Exploring cognitive links between language and music”<strong>. 
-       
-        Language and music are amongst the most impressive cognitive, social and communicative achievements of humans. The links between the two have been frequently studied and have led to many great insights, such as how musical skills transfer to language skill. However, some of these predicted effects do not always replicate across studies. Many aspects of the bidirectionality between language and music remain unknown. In particular, the effect of native language on music processing and skill has remained largely unaddressed.
-
-        With this two-day workshop, we aim to bring together a range of researchers interested in the links between language and music in order to discuss the current status quo, and facilitate discussions on how to further advance the field. Submissions can cover a wide range of topics related to cognition, perception, learning or production that link music and language. The planned program will include keynote lectures, presentations and round tables with ample time for discussion and socialising.
-
-
-        Confirmed speakers for the keynote lectures are Dr. Lieke van Maastricht (Radboud University) and Prof. Daniela Sammler (Max Planck Institute for Empirical Aesthetics). 
-
-
+    </p>
+    <p>
+       Language and music are amongst the most impressive cognitive, social and communicative achievements of humans. 
+       The links between the two have been frequently studied and have led to many great insights, such as how musical skills transfer to language skill.
+       However, some of these predicted effects do not always replicate across studies. 
+       Many aspects of the bidirectionality between language and music remain unknown. 
+       In particular, the effect of native language on music processing and skill has remained largely unaddressed.
+    </p>
+    <p>
+       With this two-day workshop, we aim to bring together a range of researchers interested in the links between language and music 
+       in order to discuss the current status quo, and facilitate discussions on how to further advance the field. 
+       Submissions can cover a wide range of topics related to cognition, perception, learning or production that link music and language. 
+       The planned program will include keynote lectures, presentations and round tables with ample time for discussion and socialising.
+    </p>
+     <p>
+        Confirmed speakers for the keynote lectures are Dr. Lieke van Maastricht <a href="https://www.ru.nl/personen/maastricht-l-van">(Radboud University)</a> and Prof. Daniela Sammler <a href="https://www.aesthetics.mpg.de/institut/mitarbeiterinnen/daniela-sammler.html">(Max Planck Institute for Empirical Aesthetics). 
+      </p>
+      <p>
         The workshop will take place at the University of Konstanz, Germany. Konstanz is a city beautifully located at Lake Constance (the Bodensee) and is a popular tourist destination. The University itself is surrounded by a nature reserve and located on top of a hill overlooking the lake and the mountains.
     </p>
 
     <h2>Organizers</h2>
     <p>
-        This workshop is organized by Prof. Tamara Rathcke and Dr. Eline A. Smit from the Department of Linguistics at the University of Konstanz. Feel free to contact us if you have any questions or need any support!
+        This workshop is organized by <a href="https://tamara-rathcke.github.io">Prof. Tamara Rathcke</a> and <a href="https://elineasmit.github.io/elineasmit/">Dr. Eline A. Smit</a>  from the Department of Linguistics at the University of Konstanz. Feel free to contact us if you have any questions or need any support!
         
         We gratefully acknowledge the following institutions who support this workshop:
     </p>
