--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </tr>
     </table>
 
-    <h2> <strong> Interdisciplinary workshop at the University of Konstanz, Germany taking place 27-28 July 2023 <strong> /h2>
+    <h2>  Interdisciplinary workshop at the University of Konstanz, Germany taking place 27-28 July 2023 /h2>
     <p>
         We are delighted to invite submissions for the two-day workshop <strong>“Musical minds: Exploring cognitive links between language and music”<strong>. 
     </p>
