--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                 <a title="Travel" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Accommodation" href="flyer">Flyer</a>
+                <a title="Flyer" href="flyer"> Accommodation</a>
             </td>
         </tr>
     </table>
 
     <h2>  Interdisciplinary workshop at the University of Konstanz, Germany taking place 27-28 July 2023 /h2>
     <p>
-        We are delighted to invite submissions for the two-day workshop <strong>“Musical minds: Exploring cognitive links between language and music”<strong>. 
+        We are delighted to invite submissions for the two-day workshop “Musical minds: Exploring cognitive links between language and music”. 
     </p>
     <p>
        Language and music are amongst the most impressive cognitive, social and communicative achievements of humans. 
