--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </tr>
     </table>
 
-
+    <h2>Interdisciplinary workshop</h2>
     <p>
         We are delighted to invite submissions for the two-day workshop “Musical minds: Exploring cognitive links between language and music”. 
     </p>
@@ -78,7 +78,7 @@
         <tr>
             <td class="sponsor">
                 <a href="https://www.uni-konstanz.de/">
-                    <img src="assets/konstanzuniversity.jpg" alt="First Sponsor Name">
+                    <img src="assets/UniKonstanz_Logo.eps" alt="First Sponsor Name">
                 </a>
             </td>
             <td class="sponsor">
