--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </table>
 
     <footer>
-        &copy; Eline A. Smit
+        &copy; Eline A. Smit | Photo copyright: &copy; University of Konstanz
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
