--- a/registration/index.html
+++ b/registration/index.html
@@ -47,20 +47,23 @@
     <br>
 
     <p>
-        Here&rsquo;s where you provide instructions how to register for your conference.
-        We used a <a href="https://www.google.com/forms/about/">Google Form</a> 
-        and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
+        Abstract submission is arranged through <a href="https://easychair.org/">EasyChair.org</a>. 
+        Please click on the following link when you are ready to submit your abstract: <i>iframe</i> 
     </p>
-    <!--
-    <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
-    -->
+
+    <iframe class="registration" src="EMBED LINK FOR EASY CHAIR REGISTRATION HERE"></iframe>
+
     <p>
-        Here&rsquo;s another paragraph of filler text:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
+        Submitted abstracts are limited to 500 words or less (excluding references) and must follow the following format:
+        - Introduction
+        - Aims of the study
+        - Methods
+        - Results
+        - Discussion
     </p>
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Eline A. Smit | Photo copyright: &copy; University of Konstanz
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
