--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
                 <a class="current" title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the conference" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Conference program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Travel" href="directions">Directions</a>
+                <a title="How to get there" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Flyer" href="flyer"> Accommodation</a>
+                <a title="Where to stay" href="flyer"> Accommodation</a>
             </td>
         </tr>
     </table>
 
-    <h2>Interdisciplinary workshop</h2>
+    <h3>Interdisciplinary workshop</h3>
     <p>
         We are delighted to invite submissions for the two-day workshop “Musical minds: Exploring cognitive links between language and music”. 
     </p>
@@ -68,7 +68,7 @@
         The workshop will take place at the University of Konstanz, Germany. Konstanz is a city beautifully located at <a href="https://www.constance-lake-constance.com/">Constance </a> (the Bodensee) and is a popular tourist destination. The <a href="https://www.uni-konstanz.de/">University</a>  itself is surrounded by a nature reserve and located on top of a hill overlooking the lake and the mountains.
     </p>
 
-    <h2>Organizers</h2>
+    <h3>Organizers</h3>
     <p>
         This workshop is organized by <a href="https://tamara-rathcke.github.io">Prof. Tamara Rathcke</a> and <a href="https://elineasmit.github.io/elineasmit/">Dr. Eline A. Smit</a>  from the Department of Linguistics at the University of Konstanz. Feel free to contact us if you have any questions or need any support!
         
@@ -78,7 +78,7 @@
         <tr>
             <td class="sponsor">
                 <a href="https://www.uni-konstanz.de/">
-                    <img src="assets/UniKonstanz_Logo.eps" alt="First Sponsor Name">
+                    <img src="assets/UniKonstanz_Logo.jpeg" alt="First Sponsor Name">
                 </a>
             </td>
             <td class="sponsor">
