--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span>
         </div>
         <div class="bottom-right">
-            27-28 July 2023 <br> University of Konstanz, Germany
+            27-28 July 2023 @ University of Konstanz, Germany
         </div>
     </div>
 
