--- a/program/index.html
+++ b/program/index.html
@@ -20,10 +20,10 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Musical minds:</span><span class="Exploring the cognitive links between language and music">Template</span>
+            <span class="title1">Musical minds:</span><span class="title2"> Exploring the cognitive links between language and music</span>
         </div>
         <div class="bottom-right">
-            27-28 July 2023<br> University of Konstanz, Germany
+            27-28 July 2023 @ University of Konstanz, Germany
         </div>
     </div>
 
@@ -326,7 +326,7 @@
     </table>
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Eline A. Smit | Photo copyright:  &copy; University of Konstanz
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
