--- a/directions/index.html
+++ b/directions/index.html
@@ -20,7 +20,7 @@
             <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span> 
         </div>
         <div class="bottom-right">
-            27-28 July 2023 <br> University of Konstanz, Germany
+            27-28 July 2023 @ University of Konstanz, Germany
         </div>
     </div>
 
@@ -30,16 +30,16 @@
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the conference" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Conference program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a class="current" title="Directions to the Conference" href="directions">Directions</a>
+                <a class="current" title="How to get there" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Where to stay" href="flyer">Accommodation</a>
             </td>
         </tr>
     </table>
@@ -50,19 +50,15 @@
         Here&rsquo;s where you can put directions to the conference,
         and other information that will help attendees find the location,
         and find the building, and register, and find local places they can stay, etc.
-        You can embed a <a href="https://www.google.com/maps">Google Maps</a> iframe
-        with directions to the conference like a did below.
-        It can also be helpful to include maps of the campus itself,
-        or pictures of the building the conference will be held in.
-        I&rsquo;ve opted to use a placeholder image of a kitten below.
+       
     </p>
+    
+    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2685.7188260644084!2d9.185755515882288!3d47.689880279190234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479af7c99232e7ed%3A0x9472a3fd1dfc8998!2sUniversity%20of%20Konstanz!5e0!3m2!1sen!2sde!4v1675697444511!5m2!1sen!2sde" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d134998.56138929052!2d-121.98776790326531!3d37.869213445646146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808ff431db2f96d1%3A0x8b99d90a20aa67de!2sMt+Diablo!5e0!3m2!1sen!2sus!4v1561787340910!5m2!1sen!2sus"></iframe>
-
-    <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">
+    <img class="center" src="assets/konstanzbuilding.jpeg" alt="Image of University Konstanz" id="UniKonstanz">
 
     <footer>
-        &copy; Conference Organizers
+        &copy; Eline A. Smit | Photo copyright: &copy; University of Konstanz
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
