--- a/program/index.html
+++ b/program/index.html
@@ -20,7 +20,7 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Musical minds:</span><span class="title2"> Exploring the cognitive links between language and music</span>
+            <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span>
         </div>
         <div class="bottom-right">
             27-28 July 2023 @ University of Konstanz, Germany
@@ -33,16 +33,16 @@
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the conference" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Conference Program" href="program">Program</a> 
+                <a class="current" title="Conference program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="How to get there" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Where to stay" href="flyer">Accommodation</a>
             </td>
         </tr>
     </table>
