--- a/registration/index.html
+++ b/registration/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | Conference Template</title>
+    <title>Registration | Musical minds workshope</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span>
         </div>
         <div class="bottom-right">
-            27-28 July 2023 <br> University of Konstanz, Germany
+            27-28 July 2023 @ University of Konstanz, Germany
         </div>
     </div>
 
@@ -30,16 +30,16 @@
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Register for the Conference" href="registration">Registration</a>
+                <a class="current" title="Register for the conference" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Conference program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="How to get there" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Where to stay" href="flyer">Accommodation</a>
             </td>
         </tr>
     </table>
@@ -55,11 +55,19 @@
 
     <p>
         Submitted abstracts are limited to 500 words or less (excluding references) and must follow the following format:
+         <br>
         - Introduction
+         <br>
         - Aims of the study
+         <br>
         - Methods
+         <br>
         - Results
+         <br>
         - Discussion
+         <br>
+        - References (if applicable)
+         <br>
     </p>
 
     <footer>
