--- a/flyer/index.html
+++ b/flyer/index.html
@@ -9,18 +9,18 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Flyer | Conference Template</title>
+    <title>Accommodation | Musical minds workshop </title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/konstanz-g32edc1f1e_1920..jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span> 
+            <span class="title1"></span><span class="title2"> </span> 
         </div>
         <div class="bottom-right">
-            27-28 July 2023 <br> University of Konstanz, Germany
+   
         </div>
     </div>
 
@@ -52,7 +52,7 @@
 
 
     <footer>
-        &copy; Eline A. Smit
+        &copy; Eline A. Smit | Photo copyright &copy; University of Konstanz
         &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
