--- a/program/index.html
+++ b/program/index.html
@@ -12,7 +12,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Program | Conference Template</title>
+    <title>Program | Musical minds workshop </title>
 </head>
 
 <body>
@@ -20,10 +20,10 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span>
+            <span class="title1"></span><span class="title2"> </span>
         </div>
         <div class="bottom-right">
-            27-28 July 2023 @ University of Konstanz, Germany
+
         </div>
     </div>
 
