--- a/registration/index.html
+++ b/registration/index.html
@@ -17,10 +17,9 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Musical minds:</span><span class="title2"> Exploring cognitive links between language and music</span>
+            <span class="title1"></span><span class="title2"></span>
         </div>
         <div class="bottom-right">
-            27-28 July 2023 @ University of Konstanz, Germany
         </div>
     </div>
 
