--- a/registration/index.html
+++ b/registration/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | Musical minds workshope</title>
+    <title>Registration | Musical minds workshop</title>
 </head>
 
 <body>
