--- a/flyer/index.html
+++ b/flyer/index.html
@@ -39,7 +39,7 @@
                 <a title="How to get there" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Where to stay" href="flyer">Accommodation</a>
+                <a class="current" title="Where to stay" href="accomodation">Accommodation</a>
             </td>
         </tr>
     </table>
