--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
     <h3>Organizers</h3>
     <p>
         This workshop is organised by <a href="https://tamara-rathcke.github.io">Prof. Tamara Rathcke</a> and <a href="https://elineasmit.github.io/elineasmit/">Dr. Eline A. Smit</a>  from the Department of Linguistics at the University of Konstanz. 
-        Feel free to contact us at tamara.rathcke[at]uni-konstanz.de or eline.smit[at]uni-konstanz.de if you have any questions or need any support!
-        
+         </p>
+         <p>
+        Feel free to contact us at tamara.rathcke[at]uni-konstanz.de or eline.smit[at]uni-konstanz.de if you have any questions!
+              </p>
+         <p>
         We gratefully acknowledge the University of Konstanz and the Dr. August und Annelies Karst Stiftung for their support.
         
     </p>
