--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </tr>
     </table>
 
-    <h3>Interdisciplinary workshop</h3>
+
     <p>
-        We are delighted to invite submissions for the two-day workshop “Musical minds: Exploring cognitive links between language and music”. 
+        We are delighted to invite submissions for the interdisciplinary two-day workshop “Musical minds: Exploring cognitive links between language and music”. 
     </p>
     <p>
        Language and music are amongst the most impressive cognitive, social and communicative achievements of humans. 
@@ -56,7 +56,7 @@
        In particular, the effect of native language on music processing and skill has remained largely unaddressed.
     </p>
     <p>
-       With this two-day workshop, we aim to bring together a range of researchers interested in the links between language and music 
+       With this two-day interdisciplinary workshop, we aim to bring together a range of researchers interested in the links between language and music 
        in order to discuss the current status quo, and facilitate discussions on how to further advance the field. 
        Submissions can cover a wide range of topics related to cognition, perception, learning or production that link music and language. 
        The planned program will include keynote lectures, presentations and round tables with ample time for discussion and socialising.
@@ -68,12 +68,12 @@
         The workshop will take place at the University of Konstanz, Germany. Konstanz is a city beautifully located at <a href="https://www.constance-lake-constance.com/">Constance </a> (the Bodensee) and is a popular tourist destination. The <a href="https://www.uni-konstanz.de/">University</a>  itself is surrounded by a nature reserve and located on top of a hill overlooking the lake and the mountains.
     </p>
 
-    <h3>Organizers</h3>
+   
     <p>
-        This workshop is organised by <a href="https://tamara-rathcke.github.io">Prof. Tamara Rathcke</a> and <a href="https://elineasmit.github.io/elineasmit/">Dr. Eline A. Smit</a>  from the Department of Linguistics at the University of Konstanz. 
+        This workshop is organised by <a href="https://elineasmit.github.io/elineasmit/">Dr. Eline A. Smit</a> and <a href="https://tamara-rathcke.github.io">Prof. Tamara Rathcke</a> from the Department of Linguistics at the University of Konstanz. 
          </p>
          <p>
-        Feel free to contact us at tamara.rathcke[at]uni-konstanz.de or eline.smit[at]uni-konstanz.de if you have any questions!
+        Feel free to contact us at eline.smit[at]uni-konstanz.de or tamara.rathcke[at]uni-konstanz.de if you have any questions!
               </p>
          <p>
         We gratefully acknowledge the University of Konstanz and the Dr. August und Annelies Karst Stiftung for their support.
@@ -92,7 +92,7 @@
 
     <footer>
         &copy; Eline A. Smit | Photo copyright: &copy; University of Konstanz
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &nbsp;|&nbsp; Design based on <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
 </body>
