--- a/directions/index.html
+++ b/directions/index.html
@@ -62,7 +62,7 @@
 
     <footer>
         &copy; Eline A. Smit | Photo copyright: &copy; University of Konstanz
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &nbsp;|&nbsp; Design based on <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
 </body>
