--- a/flyer/index.html
+++ b/flyer/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Accommodation | Musical minds workshop </title>
+    <title> Accommodation | Musical minds workshop </title>
 </head>
 
 <body>
@@ -39,7 +39,7 @@
                 <a title="How to get there" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Where to stay" href="accomodation">Accommodation</a>
+                <a class="current" title="Where to stay" href="accomodation"> Accommodation</a>
             </td>
         </tr>
     </table>
@@ -68,7 +68,7 @@
 
     <footer>
         &copy; Eline A. Smit | Photo copyright &copy; University of Konstanz
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &nbsp;|&nbsp; Design based on <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
 </body>
