--- a/program/index.html
+++ b/program/index.html
@@ -46,9 +46,11 @@
             </td>
         </tr>
     </table>
-
-    <h2>Conference Program</h2>
-
+    
+    <p>
+        Program coming soon.
+    </p>
+    <!--
     <table>
         <tr>
             <td class="date" rowspan="2">
@@ -160,9 +162,9 @@
             </td>
         </tr>
         <tr>
-            <td class="abstract">
+            <td class="abstract"> -->
                 <!-- Kept for Spacing -->
-            </td>
+   <!--          </td>
         </tr>
     </table>
 
@@ -198,9 +200,9 @@
             </td>
         </tr>
         <tr>
-            <td class="abstract">
+            <td class="abstract"> -->
                 <!-- Kept for Spacing -->
-            </td>
+       <!--      </td>
         </tr>
     </table>
 
@@ -256,9 +258,9 @@
             </td>
         </tr>
         <tr>
-            <td class="abstract">
+            <td class="abstract"> -->
                 <!-- Kept for Spacing -->
-            </td>
+    <!--         </td>
         </tr>
     </table>
 
@@ -323,11 +325,11 @@
                 Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
             </td>
         </tr>
-    </table>
+    </table> -->
 
     <footer>
         &copy; Eline A. Smit | Photo copyright:  &copy; University of Konstanz
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &nbsp;|&nbsp; Design based on <a href="https://github.com/mikepierce">Mike Pierce</a>
     </footer>
 
 </body>
