--- a/registration/index.html
+++ b/registration/index.html
@@ -46,11 +46,16 @@
     <br>
 
     <p>
-        Abstract submission is arranged through <a href="https://easychair.org/">EasyChair.org</a>. 
+        Abstract submission is not yet open, but will be arranged through <a href="https://easychair.org/">EasyChair.org</a>. 
+        A submission link will be published here soon.
+        
+        <!--
         Please click on the following link when you are ready to submit your abstract: <i>iframe</i> 
+-->
     </p>
-
+<!--
     <iframe class="registration" src="EMBED LINK FOR EASY CHAIR REGISTRATION HERE"></iframe>
+-->
 
     <p>
         Submitted abstracts are limited to 500 words or less (excluding references) and must follow the following format:
