--- a/registration/index.html
+++ b/registration/index.html
@@ -52,7 +52,7 @@
         </p>
     
     <p>
-        Conference registration will open after notifciations of acceptance have been sent out. 
+        Conference registration will open after notifications of acceptance have been sent out. 
         There will be limited space available on the workshop, therefore registration will open first for accepted presenters.
         
         <!--
