--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="current" title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the conference" href="registration">Registration</a>
+                 <a class="current" title="Call for papers!" href="registration">CfP</a>
             </td>
             <td class="navigation">
                 <a title="Conference program" href="program">Program</a> 
@@ -70,12 +70,17 @@
 
    
     <p>
-        This workshop is organised by <a href="https://elineasmit.github.io/elineasmit/">Dr. Eline A. Smit</a> and <a href="https://tamara-rathcke.github.io">Prof. Tamara Rathcke</a> from the Department of Linguistics at the University of Konstanz. 
+        This workshop is organised by <a href="https://elineasmit.github.io/elineasmit/">Dr. Eline A. Smit</a> and <a href="https://tamara-rathcke.github.io">Prof. Tamara Rathcke</a> from the Department of Linguistics at the University of Konstanz.
+
          </p>
          <p>
         Feel free to contact us at eline.smit[at]uni-konstanz.de or tamara.rathcke[at]uni-konstanz.de if you have any questions!
               </p>
-         <p>
+        <p>
+    Follow us on Twitter for updates and announcements: <a href="https://twitter.com/elineadrianne">Eline </a> and <a href="https://twitter.com/tamarathcke">Tamara </a> &#35;musicalminds23
+     </p>     
+   
+    <p>
         We gratefully acknowledge the University of Konstanz and the Dr. August und Annelies Karst Stiftung for their support.
         
     </p>
