--- a/program/index.html
+++ b/program/index.html
@@ -33,7 +33,7 @@
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the conference" href="registration">Registration</a>
+                 <a class="current" title="Call for papers!" href="registration">CfP</a>
             </td>
             <td class="navigation">
                 <a class="current" title="Conference program" href="program">Program</a> 
