--- a/flyer/index.html
+++ b/flyer/index.html
@@ -30,7 +30,7 @@
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the workshop" href="registration">Registration</a>
+                 <a class="current" title="Call for papers!" href="registration">CfP</a>
             </td>
             <td class="navigation">
                 <a title="Workshop program" href="program">Program</a> 
