--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="current" title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                 <a class="current" title="Call for papers!" href="registration">CfP</a>
+                 <a title="Call for papers!" href="registration">CfP</a>
             </td>
             <td class="navigation">
                 <a title="Conference program" href="program">Program</a> 
