--- a/registration/index.html
+++ b/registration/index.html
@@ -52,10 +52,14 @@
         </p>
         <p>
         The workshop will be a single-stream event and a select number of oral presentations will be complemented by poster presentations.
-        Authors will be able to select their preference for an oral or poster presentation during submission. There will be a student prize on offer for best presentation and poster!
+        Authors will be able to select their preference for an oral or poster presentation during submission. 
+             </p>  
+           <p> 
+         There will be a student prize on offer for best presentation and poster!
            </p>  
     <p>
-        Conference registration will open after notifications of acceptance have been sent out and will be roughly &euro;70 for senior academics and &euro;50 for (PhD) students.
+        Conference registration will open after notifications of acceptance have been sent out.
+        Registration costs are expected to be roughly &euro;70 for senior academics and &euro;50 for (PhD) students. Lunch and coffee will be included on both days.
         There will be limited space available on the workshop, therefore registration will open first for accepted presenters.
         
         <!--
