--- a/registration/index.html
+++ b/registration/index.html
@@ -51,8 +51,8 @@
         
         </p>
         <p>
-        The workshop will be a single-stream event and a select number of oral presentations will be complemented by poster presentations.
-        Authors will be able to select their preference for an oral or poster presentation during submission. 
+        The workshop will be a single-stream event and a select number of spoken presentations will be complemented by poster presentations.
+        Authors will be able to select their preference for a spoken or poster presentation during submission. 
              </p>  
            <p> 
          There will be a student prize on offer for best presentation and poster!
