--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a title="Conference program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="How to get there" href="directions">Directions</a>
+                <a title="How to get there" href="directions">Venue</a>
             </td>
             <td class="navigation">
                 <a title="Where to stay" href="flyer"> Accommodation</a>
@@ -71,14 +71,12 @@
    
     <p>
         This workshop is organised by <a href="https://elineasmit.github.io/elineasmit/">Dr. Eline A. Smit</a> and <a href="https://tamara-rathcke.github.io">Prof. Tamara Rathcke</a> from the Department of Linguistics at the University of Konstanz.
-
+    Follow us on Twitter for updates and announcements: <a href="https://twitter.com/elineadrianne">Eline </a> and <a href="https://twitter.com/tamarathcke">Tamara </a> &#35;musicalminds23 
          </p>
          <p>
         Feel free to contact us at eline.smit[at]uni-konstanz.de or tamara.rathcke[at]uni-konstanz.de if you have any questions!
               </p>
-        <p>
-    Follow us on Twitter for updates and announcements: <a href="https://twitter.com/elineadrianne">Eline </a> and <a href="https://twitter.com/tamarathcke">Tamara </a> &#35;musicalminds23
-     </p>     
+          
    
     <p>
         We gratefully acknowledge the University of Konstanz and the Dr. August und Annelies Karst Stiftung for their support.
