--- a/registration/index.html
+++ b/registration/index.html
@@ -35,7 +35,7 @@
                 <a title="Conference program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="How to get there" href="directions">Directions</a>
+                <a title="How to get there" href="directions">Venue</a>
             </td>
             <td class="navigation">
                 <a title="Where to stay" href="flyer">Accommodation</a>
