--- a/program/index.html
+++ b/program/index.html
@@ -39,7 +39,7 @@
                 <a class="current" title="Conference program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="How to get there" href="directions">Directions</a>
+                <a title="How to get there" href="directions">Venue</a>
             </td>
             <td class="navigation">
                 <a title="Where to stay" href="flyer">Accommodation</a>
