--- a/flyer/index.html
+++ b/flyer/index.html
@@ -36,7 +36,7 @@
                 <a title="Workshop program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="How to get there" href="directions">Directions</a>
+                <a title="How to get there" href="directions">Venue</a>
             </td>
             <td class="navigation">
                 <a class="current" title="Where to stay" href="accomodation"> Accommodation</a>
