--- a/directions/index.html
+++ b/directions/index.html
@@ -36,7 +36,7 @@
                 <a title="Conference program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a class="current" title="How to get there" href="directions">Directions</a>
+                <a class="current" title="How to get there" href="directions">Venue</a>
             </td>
             <td class="navigation">
                 <a title="Where to stay" href="flyer">Accommodation</a>
