--- a/registration/index.html
+++ b/registration/index.html
@@ -46,7 +46,7 @@
     <br>
 
     <p>
-        Abstract submission opens soon and details on how to submit will be published here.
+        Abstract submission is now open! Please click on the following link when you are ready to submit your abstract:  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdVrwgqwvkYmTvcNLJRAHTuSfhk1fpVMIwhA2hFpOMJA5MbYw/viewform">Abstract submission</a>        
         Deadline for abstract submission is 14 April 2023 and notifications of acceptance will be sent at the end of May.
         
         </p>
