--- a/registration/index.html
+++ b/registration/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | Musical minds workshop</title>
+    <title>Call for papers | Musical minds workshop</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Call for papers!" href="registration">CfP</a>
+                <a class="current" title="Call for papers!" href="callforpapers">CfP</a>
             </td>
             <td class="navigation">
                 <a title="Conference program" href="program">Program</a> 
@@ -46,8 +46,13 @@
     <br>
 
     <p>
-        Abstract submission is now open! Please click on the following link when you are ready to submit your abstract:  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdVrwgqwvkYmTvcNLJRAHTuSfhk1fpVMIwhA2hFpOMJA5MbYw/viewform">Abstract submission</a>        
-        Deadline for abstract submission is 14 April 2023 and notifications of acceptance will be sent at the end of May.
+        Abstract submission is now open! 
+        </p>
+     <p>
+    Please click on the following link when you are ready to submit your abstract:  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdVrwgqwvkYmTvcNLJRAHTuSfhk1fpVMIwhA2hFpOMJA5MbYw/viewform">Abstract submission</a>        
+         </p> 
+         <p>
+         Deadline for abstract submission is 14 April 2023 and notifications of acceptance will be sent at the end of May.
         
         </p>
         <p>
