--- a/registration/index.html
+++ b/registration/index.html
@@ -29,7 +29,7 @@
                 <a title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Call for papers!" href="callforpapers">CfP</a>
+                <a class="current" title="Call for papers!" href="registration">CfP</a>
             </td>
             <td class="navigation">
                 <a title="Conference program" href="program">Program</a> 
