--- a/flyer/index.html
+++ b/flyer/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-    <base href="..">
+    <base href="accommodation">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
     <meta name="description" content="Conference Template">
