--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a title="How to get there" href="directions">Venue</a>
             </td>
             <td class="navigation">
-                <a title="Where to stay" href="flyer"> Accommodation</a>
+                <a title="Where to stay" href="accommodation"> Accommodation</a>
             </td>
         </tr>
     </table>
