--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
        The planned program will include keynote lectures, presentations and round tables with ample time for discussion and socialising.
     </p>
      <p>
-        Confirmed speakers for the keynote lectures are Dr. Lieke van Maastricht <a href="https://www.ru.nl/personen/maastricht-l-van">(Radboud University)</a> and Prof. Daniela Sammler <a href="https://www.aesthetics.mpg.de/institut/mitarbeiterinnen/daniela-sammler.html">(Max Planck Institute for Empirical Aesthetics)</a> . 
+        Confirmed speakers for the keynote lectures are Dr. Lieke van Maastricht <a href="https://www.ru.nl/personen/maastricht-l-van">(Radboud University)</a> and PD Dr. Daniela Sammler <a href="https://www.aesthetics.mpg.de/institut/mitarbeiterinnen/daniela-sammler.html">(Max Planck Institute for Empirical Aesthetics)</a> . 
       </p>
       <p>
         The workshop will take place at the University of Konstanz, Germany. Konstanz is a city beautifully located at <a href="https://www.constance-lake-constance.com/">Constance </a> (the Bodensee) and is a popular tourist destination. The <a href="https://www.uni-konstanz.de/">University</a>  itself is surrounded by a nature reserve and located on top of a hill overlooking the lake and the mountains.
