--- a/registration/index.html
+++ b/registration/index.html
@@ -46,11 +46,13 @@
     <br>
 
     <p>
-        Abstract submission is now open! 
+        Abstract submission is now closed! 
         </p>
      <p>
+         <!--
     Please click on the following link when you are ready to submit your abstract:  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdVrwgqwvkYmTvcNLJRAHTuSfhk1fpVMIwhA2hFpOMJA5MbYw/viewform">Abstract submission</a>        
-         </p> 
+  -->     
+        </p> 
          <p>
          Deadline for abstract submission is 14 April 2023 and notifications of acceptance will be sent at the end of May.
         
